<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/image_to_zoom"
            android:src="@drawable/zigzag_g260a23fa1_1280"
            android:rotation="90"
            android:scaleX="2"
            android:scaleY="2"
            android:contentDescription="@string/bg"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:alpha="1.0">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/checklist">
        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello_blank_fragment"
            android:gravity="center"
            android:textSize="26sp"
            android:padding="10dp"/>
        <CheckBox android:id="@+id/checkbox_news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pref_news"/>
        <CheckBox android:id="@+id/checkbox_dj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pref_dj"/>
        <CheckBox android:id="@+id/checkbox_geo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pref_geoguesser"/>
        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_save_button"
            android:onClick="saveSettings"
            android:layout_gravity="center"/>
    </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>