<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/image_to_zoom"
        android:src="@drawable/zigzag_g260a23fa1_1280"
        android:rotation="90"
        android:scaleX="2"
        android:scaleY="2"
        android:contentDescription="@string/bg"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">


        <ImageView
            android:layout_width="150dp"
            android:layout_height="227dp"
            android:layout_gravity="center"
            android:padding="0dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo_lift_me_up" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:alpha="1.0">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/info_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="@string/where_to_go"
                    android:textColor="@color/black"
                    android:textAppearance="?attr/textAppearanceHeadline5"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="fill_vertical">

                    <EditText
                        android:id="@+id/editTextNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="number"
                        android:layout_gravity="center"/>

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/floor"
                        android:textColor="@color/black"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:layout_gravity="center"
                        />

                </LinearLayout>

                <Button
                    android:id="@+id/button_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="#E91E63"
                    android:text="@string/go_button"
                    android:layout_margin="10dp"
                    android:textSize="30sp"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:padding="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:text="@string/your_preferences"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"/>

                <TextView
                    android:id="@+id/your_preferences_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="center"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"/>

                <Button
                    android:id="@+id/goToSettingsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/go_to_settings_button"
                    android:layout_gravity="center"
                    android:onClick="sendMessage"
                    android:backgroundTint="#E91E63"/>
            </LinearLayout>



        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>
</RelativeLayout>