<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/image_to_zoom"
        android:src="@drawable/elevator_app_bg"
        android:rotation="90"
        android:scaleX="2"
        android:scaleY="2"
        android:contentDescription="@string/bg"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".MixerActivity">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo_elevator_dj" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pace" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.5">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.slider.Slider
                        android:id="@+id/slider01"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:stepSize="0.1"
                        android:valueFrom="-0.5"
                        android:valueTo="0.5"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_alignParentRight="true"
                        >
                        <TextView
                            android:id="@+id/pace_param"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rate"/>

                        <!--<TextView
                            android:id="@+id/reverb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/decay"/>-->
                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/button_pace"
                            android:layout_width="42dp"
                            android:layout_height="42dp"
                            style="@style/Widget.MaterialComponents.Button.Icon"
                            app:icon="@drawable/ic_check"
                            app:iconSize="24dp"
                            app:iconPadding="0dp"
                            android:insetLeft="0dp"
                            android:insetTop="0dp"
                            android:insetRight="0dp"
                            android:insetBottom="0dp"
                            android:layout_margin="5dp"
                            />
                    </LinearLayout>

                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phaser" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.5">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.slider.Slider
                        android:id="@+id/slider02"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:stepSize="1.0"
                        android:valueFrom="2.0"
                        android:valueTo="8.0" />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_alignParentRight="true"
                        >
                        <TextView
                            android:id="@+id/phaser_param"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/octaves"/>

                        <!--<TextView
                            android:id="@+id/reverb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/decay"/>-->
                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/button_phaser"
                            android:layout_width="42dp"
                            android:layout_height="42dp"
                            style="@style/Widget.MaterialComponents.Button.Icon"
                            app:icon="@drawable/ic_check"
                            app:iconSize="24dp"
                            app:iconPadding="0dp"
                            android:insetLeft="0dp"
                            android:insetTop="0dp"
                            android:insetRight="0dp"
                            android:insetBottom="0dp"
                            android:layout_margin="5dp"
                            />
                    </LinearLayout>

                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reverb" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.5">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.slider.Slider
                        android:id="@+id/slider03"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:stepSize="1.0"
                        android:valueFrom="1.0"
                        android:valueTo="10.0" />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_alignParentRight="true"
                        >
                        <TextView
                            android:id="@+id/reverb_param"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" decay"/>

                        <!--<TextView
                            android:id="@+id/reverb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/decay"/>-->
                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/button_reverb"
                            android:layout_width="42dp"
                            android:layout_height="42dp"
                            style="@style/Widget.MaterialComponents.Button.Icon"
                            app:icon="@drawable/ic_check"
                            app:iconSize="24dp"
                            app:iconPadding="0dp"
                            android:insetLeft="0dp"
                            android:insetTop="0dp"
                            android:insetRight="0dp"
                            android:insetBottom="0dp"
                            android:layout_margin="5dp"
                            />
                    </LinearLayout>

                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_airhorn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            app:icon="@drawable/ic_air"
            android:text="Airhorn"/>


    </LinearLayout>


</RelativeLayout>